--- a/src/sites/z001/009-instagram.com.scss
+++ b/src/sites/z001/009-instagram.com.scss
@@ -1,5 +1,5 @@
 :not(#a):not(#b):not(#c) {
-  [data-utags_node_type="notag_relative"] + .utags_ul.notag .utags_captain_tag {
+  [data-utags_node_type="notag_relative"] + .utags_ul_0 .utags_captain_tag {
     position: relative !important;
     width: 14px !important;
     height: 14px !important;
