--- a/src/sites/z001/012-youtube.com.scss
+++ b/src/sites/z001/012-youtube.com.scss
@@ -1,7 +1,7 @@
 :not(#a):not(#b):not(#c) {
   ytd-rich-item-renderer /* home page */ {
     h3.ytd-rich-grid-media {
-      .utags_ul.notag {
+      .utags_ul_0 {
         display: block !important;
         height: 0;
 
@@ -13,7 +13,7 @@
     }
 
     yt-formatted-string[ellipsis-truncate-styling] {
-      .utags_ul.notag .utags_captain_tag {
+      .utags_ul_0 .utags_captain_tag {
         left: -20px;
       }
     }
@@ -22,7 +22,7 @@
   ytd-video-renderer.ytd-item-section-renderer /* search result */,
   ytd-video-renderer.ytd-vertical-list-renderer /* search result */ {
     h3 {
-      .utags_ul.notag {
+      .utags_ul_0 {
         display: block !important;
         height: 0;
 
@@ -34,7 +34,7 @@
     }
 
     yt-formatted-string.ytd-channel-name {
-      .utags_ul.notag .utags_captain_tag {
+      .utags_ul_0 .utags_captain_tag {
         left: -20px;
       }
     }
@@ -42,7 +42,7 @@
 
   .watch-active-metadata ytd-channel-name yt-formatted-string /* watch page > channel name */,
   ytd-comment-thread-renderer h3.ytd-comment-renderer {
-    .utags_ul.notag {
+    .utags_ul_0 {
       display: block !important;
       height: 0;
 
@@ -54,7 +54,7 @@
   }
 
   .ytd-shorts ytd-reel-video-renderer ytd-channel-name yt-formatted-string /* shorts > channel name */ {
-    .utags_ul.notag .utags_captain_tag {
+    .utags_ul_0 .utags_captain_tag {
       left: -24px;
     }
   }
