--- a/src/sites/z001/012-youtube.com.scss
+++ b/src/sites/z001/012-youtube.com.scss
@@ -2,13 +2,14 @@
   ytd-rich-item-renderer /* home page */ {
     h3.ytd-rich-grid-media {
       .utags_ul_0 {
-        display: block !important;
-        height: 0;
-
-        .utags_captain_tag {
-          top: -22px;
-          background-color: #ffffffdd !important;
-        }
+        --utags-notag-ul-disply: var(--utags-notag-ul-disply-2);
+        --utags-notag-ul-height: var(--utags-notag-ul-height-2);
+        --utags-notag-ul-position: var(--utags-notag-ul-position-2);
+        --utags-notag-captain-tag-top: var(--utags-notag-captain-tag-top-2);
+        --utags-notag-captain-tag-left: var(--utags-notag-captain-tag-left-2);
+        --utags-captain-tag-background-color: var(
+          --utags-captain-tag-background-color-overlap
+        );
       }
     }
 
@@ -23,13 +24,14 @@
   ytd-video-renderer.ytd-vertical-list-renderer /* search result */ {
     h3 {
       .utags_ul_0 {
-        display: block !important;
-        height: 0;
-
-        .utags_captain_tag {
-          top: -22px;
-          background-color: #ffffffdd !important;
-        }
+        --utags-notag-ul-disply: var(--utags-notag-ul-disply-2);
+        --utags-notag-ul-height: var(--utags-notag-ul-height-2);
+        --utags-notag-ul-position: var(--utags-notag-ul-position-2);
+        --utags-notag-captain-tag-top: var(--utags-notag-captain-tag-top-2);
+        --utags-notag-captain-tag-left: var(--utags-notag-captain-tag-left-2);
+        --utags-captain-tag-background-color: var(
+          --utags-captain-tag-background-color-overlap
+        );
       }
     }
 
@@ -43,13 +45,14 @@
   .watch-active-metadata ytd-channel-name yt-formatted-string /* watch page > channel name */,
   ytd-comment-thread-renderer h3.ytd-comment-renderer {
     .utags_ul_0 {
-      display: block !important;
-      height: 0;
-
-      .utags_captain_tag {
-        top: -22px;
-        background-color: #ffffffdd !important;
-      }
+      --utags-notag-ul-disply: var(--utags-notag-ul-disply-2);
+      --utags-notag-ul-height: var(--utags-notag-ul-height-2);
+      --utags-notag-ul-position: var(--utags-notag-ul-position-2);
+      --utags-notag-captain-tag-top: var(--utags-notag-captain-tag-top-2);
+      --utags-notag-captain-tag-left: var(--utags-notag-captain-tag-left-2);
+      --utags-captain-tag-background-color: var(
+        --utags-captain-tag-background-color-overlap
+      );
     }
   }
 
