--- a/src/content.scss
+++ b/src/content.scss
@@ -281,6 +281,7 @@
         text-align: left;
         text-overflow: ellipsis;
         width: 100%;
+        margin: 0;
         font-size: 12px;
 
         &:focus,
