--- a/src/content.scss
+++ b/src/content.scss
@@ -301,6 +301,7 @@
       font-size: 10px;
       line-height: 1;
       height: 18px;
+      padding: 0 6px;
       border-radius: 2px;
       color: var(--utags-action-button-text-color);
       background-color: var(--utags-action-button-bg-color);
