--- a/src/content.scss
+++ b/src/content.scss
@@ -11,6 +11,7 @@
     box-sizing: border-box !important;
     display: inline !important;
     overflow: visible;
+    white-space: normal;
     list-style-type: none !important;
     margin: 0 !important;
     padding: 0 !important;
@@ -27,7 +28,7 @@
       float: none !important;
       overflow: visible;
       width: unset !important;
-      height: 14px !important;
+      height: unset !important;
       border: none !important;
       padding: 0 !important;
       margin: 0 !important;
@@ -56,7 +57,7 @@
       font-size: 10px !important;
       letter-spacing: 0 !important;
       line-height: 1 !important;
-      height: 14px !important;
+      height: unset !important;
       width: unset !important;
       font-weight: normal !important;
       text-decoration: none !important;
@@ -77,15 +78,15 @@
     .utags_text_tag[data-utags_tag]::before {
       content: attr(data-utags_tag);
       display: block;
-      font-size: 10px;
+      font-size: var(--utags-text-tag-font-size);
       line-height: 1;
-      height: 10px;
+      height: unset;
     }
 
     .utags_captain_tag,
     .utags_captain_tag2 {
-      width: 14px !important;
-      height: 14px !important;
+      width: var(--utags-captain-tag-size) !important;
+      height: var(--utags-captain-tag-size) !important;
       padding: 1px 0 0 1px !important;
       background: none !important;
       color: var(--utags-captain-tag-color) !important;
@@ -140,6 +141,7 @@
 
       > li {
         position: relative !important;
+        height: var(--utags-captain-tag-size) !important;
       }
     }
   }
@@ -150,8 +152,8 @@
   .utags_show_all .utags_captain_tag,
   :not(a):not([data-utags_node_type="link"]) + .utags_ul .utags_captain_tag {
     opacity: 100%;
-    width: 22px !important;
-    height: 22px !important;
+    width: calc(var(--utags-captain-tag-size) + 8px) !important;
+    height: calc(var(--utags-captain-tag-size) + 8px) !important;
     padding: 5px 4px 4px 5px !important;
     transition: all 0s 0.1s !important;
     /* Fix v2ex 超级增强 start */
@@ -179,8 +181,6 @@
     left: 0;
     height: 0;
     width: 0;
-    background-color: #ff6361;
-    overflow: scroll;
     z-index: 100000;
 
     .utags_modal_wrapper {
@@ -364,19 +364,26 @@
     }
 
     li {
+      box-sizing: border-box;
       cursor: pointer;
       font-size: 12px;
       height: 16px;
       display: flex;
       align-items: center;
       padding: 0 2px 0 8px;
-      max-width: 100px;
+      max-width: 150px;
       overflow: hidden;
       text-overflow: ellipsis;
 
       &.utags_active,
       &.utags_active2 {
         background-color: #fef2f2;
+      }
+
+      span {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
     }
   }
@@ -439,9 +446,11 @@
   --utags-captain-tag-background-color-overlap: #ffffffdd;
   --utags-captain-tag-color: #ff6361;
   --utags-captain-tag-hover-color: #256cf1;
+  --utags-captain-tag-size: 14px;
   --utags-text-tag-color: red;
   --utags-text-tag-border-color: red;
   --utags-text-tag-background-color: unset;
+  --utags-text-tag-font-size: 10px;
   --utags-button-text-color: #1a73e8;
   --utags-button-bg-color: #ffffff;
   --utags-button-border-color: #dadce0;
