--- a/src/content.scss
+++ b/src/content.scss
@@ -7,6 +7,11 @@
     background-color: red;
   }
 
+  /* fix mp.weixin.qq.com issue */
+  [data-utags_key] {
+    display: none !important;
+  }
+
   .utags_ul {
     box-sizing: border-box !important;
     display: inline-flex !important;
