--- a/src/content.scss
+++ b/src/content.scss
@@ -548,6 +548,15 @@ textarea[data-key="emojiTags"] {
   --utags-notag-captain-tag-top-4: 0;
   --utags-notag-captain-tag-left-4: -4px;
 
+  /* Dynamic position */
+  --utags-notag-ul-disply-5: block;
+  --utags-notag-ul-height-5: 0;
+  --utags-notag-ul-width-5: 0;
+  --utags-notag-ul-position-5: absolute;
+  --utags-notag-ul-top-5: -9999px;
+  --utags-notag-captain-tag-top-5: 0;
+  --utags-notag-captain-tag-left-5: -4px;
+
   --utags-notag-ul-disply: var(--utags-notag-ul-disply-1);
   --utags-notag-ul-float: var(--utags-notag-ul-float-1);
   --utags-notag-ul-height: var(--utags-notag-ul-height-1);
