--- a/src/sites/z001/027-discourse.scss
+++ b/src/sites/z001/027-discourse.scss
@@ -1,25 +1,145 @@
 :not(#a):not(#b):not(#c) {
-  /* user name */
-  a[href^="/u/"][data-utags] + {
+  /* default */
+  a + {
     .utags_ul_0 {
-      --utags-notag-ul-disply: var(--utags-notag-ul-disply-2);
-      --utags-notag-ul-height: var(--utags-notag-ul-height-2);
-      --utags-notag-ul-position: var(--utags-notag-ul-position-2);
-      --utags-notag-ul-top: var(--utags-notag-ul-top-2);
-      --utags-notag-captain-tag-top: var(--utags-notag-captain-tag-top-2);
-      --utags-notag-captain-tag-left: var(--utags-notag-captain-tag-left-2);
+      --utags-notag-ul-disply: var(--utags-notag-ul-disply-5);
+      --utags-notag-ul-height: var(--utags-notag-ul-height-5);
+      --utags-notag-ul-position: var(--utags-notag-ul-position-5);
+      --utags-notag-ul-top: var(--utags-notag-ul-top-5);
+      --utags-notag-captain-tag-top: 2px;
+      --utags-notag-captain-tag-left: 22px;
+      --utags-captain-tag-background-color: var(
+        --utags-captain-tag-background-color-overlap
+      );
     }
   }
 
-  /* primary name */
-  .names .first a[href^="/u/"][data-utags] + {
-    .utags_ul_0 {
-      --utags-notag-ul-disply: var(--utags-notag-ul-disply-4);
-      --utags-notag-ul-height: var(--utags-notag-ul-height-4);
-      --utags-notag-ul-position: var(--utags-notag-ul-position-4);
-      --utags-notag-ul-top: var(--utags-notag-ul-top-4);
-      --utags-notag-captain-tag-top: var(--utags-notag-captain-tag-top-4);
-      --utags-notag-captain-tag-left: var(--utags-notag-captain-tag-left-4);
+  /* topic list page */
+  .topic-list {
+    --utags-list-node-display: table-row;
+
+    .main-link a.title + {
+      .utags_ul_0 {
+        --utags-notag-captain-tag-top: -18px;
+      }
+
+      .utags_ul_1 {
+        margin-bottom: 2px !important;
+      }
+    }
+    .discourse-tag + {
+      .utags_ul_1 {
+        margin-top: 3px !important;
+      }
+    }
+    .posters a:first-of-type + {
+      .utags_ul_0 {
+        --utags-notag-captain-tag-top: 22px;
+        --utags-notag-captain-tag-left: 0px;
+      }
+
+      .utags_ul_1 {
+        position: absolute;
+        top: -9999px;
+        z-index: 100;
+        margin-top: 16px !important;
+        margin-left: 3px !important;
+      }
+    }
+  }
+
+  /* topoic detail page header */
+  header {
+    .header-title a.topic-link + {
+      .utags_ul_0 {
+        --utags-notag-captain-tag-top: -12px;
+      }
+
+      .utags_ul_1 {
+        position: absolute;
+        top: -9999px;
+        z-index: 100;
+        margin-bottom: 4px !important;
+      }
+    }
+    /* title use `dispaly: inline` at linux.do */
+    .header-title a.topic-link[data-utags_flag="1"] + {
+      .utags_ul_1 {
+        position: unset;
+        margin-bottom: 4px !important;
+      }
+    }
+    .badge-category__wrapper + {
+      .utags_ul_1 {
+        margin-top: 2px !important;
+      }
+    }
+  }
+
+  /* topoic detail page content */
+  #topic-title {
+    a.fancy-title + {
+      .utags_ul_0 {
+        --utags-notag-captain-tag-top: -18px;
+      }
+
+      .utags_ul_1 {
+        margin-bottom: 6px !important;
+      }
+    }
+    .discourse-tag + {
+      .utags_ul_1 {
+        margin-top: 4px !important;
+      }
+    }
+  }
+
+  .topic-body .names a + {
+    .utags_ul_1 {
+      position: absolute;
+      top: -9999px;
+      z-index: 100;
+      margin-top: 12px !important;
+    }
+  }
+
+  /* https://discourse.org/categories */
+  .column .category-list .category-title-link + {
+    .utags_ul_1 {
+      position: absolute;
+      top: -9999px;
+      z-index: 100;
+      margin-top: 14px !important;
+    }
+  }
+  .column .latest-topic-list .main-link {
+    .title + {
+      .utags_ul_0 {
+        --utags-notag-captain-tag-top: -18px;
+      }
+
+      .utags_ul_1 {
+        margin-bottom: 2px !important;
+      }
+    }
+    .badge-category__wrapper + {
+      .utags_ul_1 {
+        padding-top: 3px !important;
+      }
+    }
+    .discourse-tag + {
+      .utags_ul_1 {
+        margin-top: 4px !important;
+      }
+    }
+  }
+  /* https://discourse.org/search?q= */
+  .search-container .search-link + {
+    .utags_ul_1 {
+      position: absolute;
+      top: -9999px;
+      z-index: 100;
+      margin-top: 14px !important;
     }
   }
 }
