fix(dlsite.com): update style

--- a/src/content.scss
+++ b/src/content.scss
@@ -94,6 +94,12 @@
       font-size: var(--utags-text-tag-font-size);
       line-height: 1;
       height: unset;
+      width: unset;
+      border-radius: unset;
+      border: unset;
+      background: unset;
+      margin: unset;
+      padding: unset;
     }
 
     .utags_emoji_tag {
